--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -253,7 +253,7 @@ $navbar-font-size:       $font-size-root !default;
 $mobile-navbar-height:   60px !default;
 
 $headings-margin-bottom: ($spacer / 2) !default;
-$headings-font-family:   $font-family-spec !default;
+$headings-font-family:   $font-family-base !default;
 $headings-font-weight:   300 !default;
 $headings-line-height:   1.1 !default;
 $headings-color:         inherit !default;
