--- a/assets/sass/global/_custom.scss
+++ b/assets/sass/global/_custom.scss
@@ -445,6 +445,29 @@ hr.small {
 	@include linear-gradient(-113deg, rgb(71,18,39) 0%, rgb(71,18,39) 20%, rgb(71,18,39) 80%, rgb(186,69,117) 100%);
 }
 
+%stripe { 
+	position: relative;
+	&:before {
+		position: absolute;
+		top: 0;
+		height: 5px;
+		width: 100%;
+	}
+	
+}
+
+%blue {
+	&:before {
+		@include linear-gradient(150deg, $blue 0%, $blue 20%, $blue-dark 80%, $blue-dark 100%);
+	}
+}
+
+%green {
+	&:before {
+		@include linear-gradient(150deg, $brand-secondary 0%, $brand-secondary 20%, $brand-tertiary 80%, $brand-tertiary 100%);
+	}
+}
+
 %styled-text {
 	color: $brand-primary;
 	font-family: $navbar-font-family;
@@ -641,6 +664,28 @@ hr.small {
 }
 
 /* 3a. Page Components */
+
+// Logo
+.logo {
+	position: relative;
+	display: block;
+	width: 140px;
+	height: 85px;
+	margin: 0 auto;
+	&:before {
+		pointer-events: none;
+		font-size: 11px;
+		font-family: 'Lato';
+		color: $gray-lightest;
+		content: 'vanorman.design';
+		text-transform: uppercase;
+		text-align: center;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		letter-spacing: 2px;
+	}
+}
 
 // Breadcrumbs
 .bct-wrapper {
